# LawyerCaseTool-Local-Offline

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT_REPORT_2026-04-26.md  CODE_REVIEW_REPORT.md  DEFAULT_SETTINGS_SUMMARY.md  DRAG_AND_PASTE_FEATURE.md  FIX_REPORT_2026-02-25.md  INFO_EXTRACTION_FEATURE.md  LEGAL_DOC_RECOGNITION_SUMMARY.md  LEXORA_项目完整介绍.md  LICENSE  OPPONENT_CHECKBOX_FEATURE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_RESUME.md  README.md  SIMPLE_TEMPLATES_SUMMARY.md  SUMMARY_TEXT_FEATURE.md  UPDATE_SUMMARY_v1.2.5.md  UPDATE_SUMMARY_v1.3.2.md  VARIABLE_SORTING_FEATURE.md  WORD_TEMPLATE_IMPLEMENTATION.md  cleanup_templates.py  fix_load_cases.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-full.txt  requirements-ocr.txt  requirements.txt  restore_method.py  test_ocr_debug.py  test_splitter_layout.py  verify_default.py  verify_default_templates.py  verify_templates.py  wechat-screenshot-to-pdf.skill  打包文件wechat-screenshot-to-pdf.skill如何使用.txt
docs/: API.md  ARCHITECTURE.md  ARCHIVE_FEATURE_PLAN.md  CASE_MANAGEMENT_DESIGN.md  CODE_REVIEW_2026-04-24.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_SUMMARY.md  CROSS_PLATFORM_ARCHITECTURE_PLAN.md  FUNCTION_OPTIMIZATION_IMPLEMENTATION_2026-04-24.md  INCIDENT_POSTMORTEM_2026-05-16.md  JUDGMENT_RECOGNITION_DESIGN.md  LEGAL_DOCUMENT_RECOGNITION_DESIGN.md  LEGAL_DOC_IMPLEMENTATION_RECORD.md  LOCAL_FILE_INDEX_AND_BACKUP_PLAN_2026-04-25.md  MODERN_UI_DESIGN_GUIDE.md  PRODUCT_ROADMAP.html  PRODUCT_ROADMAP.md  PROJECT_STATUS.md  STANDALONE_CASE_CANVAS_PRODUCT_SPEC_2026-04-30.md  WINDOWS_PLATFORM_OPTIMIZATION_2026-04-25.md  WORD_TEMPLATE_MAKER_DESIGN.md  WORKBENCH_REDESIGN_PLAN.md  design_prototype.html  fluent_design_guide.md  fluent_design_system.py  fluent_prototype.py  frontend_redesign_proposal.md
scripts/: create_simple_templates.py  (+12 more)
(+179 files in other folders)
